--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
     --color-3b4149:#3b4149;
     --color-febd69:#febd69;
     --color-232f3e:#232f3e;
+    --color-bf4800:#bf4800;
   }
 
 
@@ -21,6 +22,20 @@ body{
 a {
     text-decoration: none;
     display: inline-block;
+}
+
+.button{
+    background-color: var(--color-232f3e);
+    color: white;
+    font-size: 14px;
+    padding: 13px 33px;
+    border-radius: 25px;
+    text-decoration: none;
+    
+    &:hover{
+        background-color: var(--color-febd69) ;
+        color: var(--color-131921);
+    }
 }
 
 .gap-10{
