--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -81,6 +81,46 @@
 
 }
 
-.home-wrapper-2{
+.home-wrapper-2, .home-wrapper-3{
     background-color: var(--color-f5f5f7);
+}
+
+
+.home-wrapper-3{
+
+    .categories{
+        background-color: white;
+        box-shadow: 0 0 10px #0000001a;
+        padding: 15px;
+        
+        > div {
+            width: 25%;
+            padding: 10px 10px 10px 20px;
+
+            >div{
+                width: 60%;
+            }
+       
+       &:nth-child(1),
+       &:nth-child(2),
+       &:nth-child(3),
+       &:nth-child(5),
+       &:nth-child(6),
+       &:nth-child(7)
+       {
+          border-right: 1px solid var(--color-ededed);
+       }
+
+       &:nth-child(1),
+       &:nth-child(2),
+       &:nth-child(3),
+       &:nth-child(4)
+       {        
+            border-bottom: 1px solid var(--color-ededed);
+       }
+
+
+        }
+        
+}
 }
