--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -124,3 +124,12 @@
         
 }
 }
+
+.mqruee-wrapper{
+
+    .card-wrapper{
+        background-color: white;
+        box-shadow: 0 0 10px #0000001a;
+        padding: 15px;
+    }
+}
