--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -81,7 +81,7 @@
 
 }
 
-.home-wrapper-2, .home-wrapper-3{
+.home-wrapper-2, .home-wrapper-3, .home-wrapper-5{
     background-color: var(--color-f5f5f7);
 }
 
@@ -132,4 +132,22 @@
         box-shadow: 0 0 10px #0000001a;
         padding: 15px;
     }
+}
+
+    .home-wrapper-5{
+
+        .date{
+            font-size: 13px;
+            line-height: 22px;
+            color: var(--color-77777);
+
+        }
+        .heading{
+            font-size: 26px;
+            line-height: 32px;
+            font-weight: 500;
+            margin-bottom: 30px;
+    }
+
+
 }
