--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -81,7 +81,7 @@
 
 }
 
-.home-wrapper-2, .home-wrapper-3, .home-wrapper-5{
+.home-wrapper-2, .home-wrapper-3, .home-wrapper-5, .home-wrapper-6{
     background-color: var(--color-f5f5f7);
 }
 
@@ -149,5 +149,28 @@
             margin-bottom: 30px;
     }
 
+
+}
+
+.home-wrapper-6{
+    
+    .brand{
+        color: var(--color-bf4800);
+        font-size: 13px;
+    }
+    
+    .title{
+        font-size: 15px;
+        color: var(--color-1c1c1b);
+    }
+    .price{
+        font-size: 16px;
+        color: var(--color-1c1c1b);
+    }
+    .stars{
+        .dv-star-rating{
+            font-size: 25px;
+        }
+    }
 
 }
