--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -81,7 +81,7 @@
 
 }
 
-.home-wrapper-2, .home-wrapper-3, .home-wrapper-5, .home-wrapper-6, .home-wrapper-7{
+.home-wrapper-2, .home-wrapper-3, .home-wrapper-5, .home-wrapper-6, .home-wrapper-7, .home-wrapper-8{
     background-color: var(--color-f5f5f7);
 }
 
