--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,7 @@
     --color-ededed:#ededed;
     --color-777777:#777777;
     --color-1c1c1b:#1c1c1b;
+    --text-dark:#212529;
   }
 
 
@@ -41,6 +42,11 @@ a {
         color: var(--color-131921);
     }
 }
+
+.home-wrapper-2{
+    background-color: var(--color-f5f5f7);
+}
+
 
 .gap-10{
     gap: 10px;
